--- a/.github/workflows/glualint.yml
+++ b/.github/workflows/glualint.yml
@@ -17,7 +17,7 @@ jobs:
         export PATH=$PATH:/tmp/bin
         mkdir -p /tmp/bin
         pushd /tmp/bin
-        wget -q https://github.com/FPtje/GLuaFixer/releases/download/1.24.6/glualint-1.24.6-linux-stripped.zip -O glualint.zip
+        wget -q https://github.com/FPtje/GLuaFixer/releases/download/1.24.6/glualint-1.24.6-x86_64-linux.zip -O glualint.zip
         unzip glualint.zip
         chmod +x glualint
         popd
