--- a/cfg/game.cfg
+++ b/cfg/game.cfg
@@ -2,7 +2,18 @@ sv_rollangle 0
 mp_flashlight 1
 sv_noclipspeed 5
 sv_noclipaccelerate 5
+
+sv_parallel_sendsnapshot 1
+sv_parallel_packentities 1
+sv_maxrate 0
+sv_minrate 75000
+sv_minupdaterate 20
 sv_maxupdaterate 20
+sv_mincmdrate 20
+sv_maxcmdrate 20
+net_splitrate 4
+net_maxcleartime 0.001
+net_splitpacket_maxrate 256000
 
 hostname "SpaceAge [Starting...]"
 sv_gamename_override SpaceAge
